--- a/app/src/main/res/layout/detail_song_fragment.xml
+++ b/app/src/main/res/layout/detail_song_fragment.xml
@@ -184,7 +184,7 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/album_rv"
+                android:id="@+id/songs_album_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
