PT-145 Minor fix listener.

--- a/app/src/main/res/layout/layout_song_form_for_album_detail.xml
+++ b/app/src/main/res/layout/layout_song_form_for_album_detail.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/song_image">
+            app:layout_constraintStart_toEndOf="@+id/song_image"
+            android:background="@drawable/custom_ripple_effect_after_21">
 
             <ImageView
                 android:id="@+id/imageView"
