PT-145 Minor fix remove nestedScroll flag to xml.

--- a/app/src/main/res/layout/detail_album_fragment.xml
+++ b/app/src/main/res/layout/detail_album_fragment.xml
@@ -226,6 +226,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/bottom_navigation_height"
                     android:background="@color/transparent"
+                    android:nestedScrollingEnabled="false"
                     android:clipToPadding="false"
                     android:scrollbars="vertical"
                     android:text="@string/no_data_available"
