--- a/app/src/main/res/layout/detail_artist_fragment.xml
+++ b/app/src/main/res/layout/detail_artist_fragment.xml
@@ -188,6 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"
+                android:nestedScrollingEnabled="false"
                 android:clipToPadding="false"
                 android:paddingBottom="50dp"
                 android:scrollbars="vertical"
