--- a/app/src/main/res/layout/detail_song_fragment.xml
+++ b/app/src/main/res/layout/detail_song_fragment.xml
@@ -191,6 +191,7 @@
                 android:clipToPadding="false"
                 android:paddingBottom="50dp"
                 android:scrollbars="vertical"
+                android:nestedScrollingEnabled="false"
                 android:text="@string/no_data_available"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_constraintEnd_toEndOf="@+id/author_value"
