--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -13,8 +13,7 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_background_dark"
-            android:translationZ="0.1dp"
+            android:background="@color/status_bar_light_color"
             app:elevation="0dp"
             app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.AppBarLayoutBehaviorFix">
 
@@ -22,42 +21,28 @@
                 android:id="@+id/tool_bar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:contentInsetStart="0dp"
-                android:contentInsetLeft="0dp"
-                android:contentInsetEnd="0dp"
-                android:contentInsetRight="0dp"
                 android:minHeight="?attr/actionBarSize"
-                app:contentInsetEnd="0dp"
+                app:contentInsetEnd="16dp"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
-                app:contentInsetStart="0dp"
+                app:contentInsetStart="16dp"
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|snap|enterAlways"
                 app:popupTheme="@style/MyMaterialTheme.Base">
 
-                <android.support.v7.widget.CardView
-                    android:id="@+id/cardS"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
-                    android:layout_marginEnd="6dp"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="2dp"
-                    app:cardUseCompatPadding="true">
-                    <!--app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.BottomNavigationBehavior"-->
-
                     <android.support.v7.widget.SearchView
                         android:id="@+id/search_edit_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:background="@drawable/rounded_shape"
-                        android:elevation="2dp"
-                        android:gravity="center_vertical"
-                        android:hint="@string/search"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:theme="@style/MySearchViewStyle" />
-                </android.support.v7.widget.CardView>
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:background="@drawable/rounded_shape_for_search_view"
+                        android:paddingStart="-16dp"
+                        android:gravity="start"
+                        app:iconifiedByDefault="false"
+                        app:queryBackground="@null"
+                        app:queryHint="Введите интересующий вопрос..."
+                        app:searchIcon="@drawable/ic_search_icon"
+                        app:theme="@style/AppSearchView" />
+
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
